--- a/erro.html
+++ b/erro.html
@@ -12,15 +12,15 @@
 		<meta http-equiv="refresh" content="10;url=https://www.updevops.com.br" />
 		<title>Currículo Online &mdash; Erro</title>
 		<meta name="robots" content="noindex,nofollow">
-		<link rel="stylesheet" href="./assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="./assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="https://www.updevops.com.br/assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="https://www.updevops.com.br/assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<img src="./images/erro-pagina.gif" class="imagem-erro"/>
+				<img src="https://www.updevops.com.br/images/erro-pagina.gif" class="imagem-erro"/>
 
         <!-- Header -->
             <header id="header">
@@ -44,10 +44,10 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="https://www.updevops.com.br/assets/js/jquery.min.js"></script>
+			<script src="https://www.updevops.com.br/assets/js/browser.min.js"></script>
+			<script src="https://www.updevops.com.br/assets/js/breakpoints.min.js"></script>
+			<script src="https://www.updevops.com.br/assets/js/util.js"></script>
+			<script src="https://www.updevops.com.br/assets/js/main.js"></script>
 	</body>
 </html>
