--- a/cv/001.html
+++ b/cv/001.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="description" content="Grupo 8: Erivando Sena; Micael; Laerte; Renato. Mentor TCC: Rodolfo @Homaru">
+	<meta name="description" content="Grupo 8: Erivando Sena. Mentor TCC: Rodolfo @Homaru">
 	<meta name="keywords" content="UP DevOps, Curriculos, Escola da Nuvem, AWS, Bucket S3, CloudFront, html5, css3, mobile first, website responsive" />
 	<meta name="author" content="Erivando Sena" />
 	<title>Currículo Online &mdash; Erivando</title>
